--- a/MAUIInsights.csproj
+++ b/MAUIInsights.csproj
@@ -61,5 +61,8 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
+		<PackageReference Include="Microsoft.ApplicationInsights" Version="2.21.0-beta1" />
+		<PackageReference Include="Microsoft.ApplicationInsights.PerfCounterCollector" Version="2.21.0-beta1" />
+		<PackageReference Include="System.Diagnostics.PerformanceCounter" Version="7.0.0-preview.4.22229.4" />
 	</ItemGroup>
 </Project>
